--- a/src/components/atividade-2/people-counter/PeopleCounter.css
+++ b/src/components/atividade-2/people-counter/PeopleCounter.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 .d-flex {
     display: flex;
@@ -72,29 +66,29 @@
     width: 10%;
 }
 
-.p-1 {padding: 1rem;}
-.p-2 {padding: 2rem;}
+.p-1 {padding: 16rem;}
+.p-2 {padding: 32rem;}
 .p-3 {padding: 3rem;}
 .p-4 {padding: 4rem;}
 .p-5 {padding: 5rem;}
 
-.mb-1 {margin-bottom: 1rem;}
-.mb-2 {margin-bottom: 2rem;}
+.mb-1 {margin-bottom: 16rem;}
+.mb-2 {margin-bottom: 32rem;}
 .mb-3 {margin-bottom: 3rem;}
 .mb-4 {margin-bottom: 4rem;}
 .mb-5 {margin-bottom: 5rem;}
-.me-1 {margin-right: 1rem;}
-.me-2 {margin-right: 2rem;}
+.me-1 {margin-right: 16rem;}
+.me-2 {margin-right: 32rem;}
 .me-3 {margin-right: 3rem;}
 .me-4 {margin-right: 4rem;}
 .me-5 {margin-right: 5rem;}
-.ms-1 {margin-left: 1rem;}
-.ms-2 {margin-left: 2rem;}
+.ms-1 {margin-left: 16rem;}
+.ms-2 {margin-left: 32rem;}
 .ms-3 {margin-left: 3rem;}
 .ms-4 {margin-left: 4rem;}
 .ms-5 {margin-left: 5rem;}
-.mt-1 {margin-top: 1rem;}
-.mt-2 {margin-top: 2rem;}
+.mt-1 {margin-top: 16rem;}
+.mt-2 {margin-top: 32rem;}
 .mt-3 {margin-top: 3rem;}
 .mt-4 {margin-top: 4rem;}
 .mt-5 {margin-top: 5rem;}
@@ -103,14 +97,15 @@
     cursor: pointer;
 }
 
-.container {
+.container-people {
     width: 100%;
     height: 100vh;
+    font-size: 32rem;
 }
 
 .people-counter-card {
     width: 500px;
-    padding: 1rem;
+    padding: 16rem;
     border: 1px solid #b8b8b8;
     border-radius: 5px;
 }
